# LingBot-VLA-v2-Custom-Finetune

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: dataset_contract.yaml
configs/robot_configs/: take_wrong_item_right_arm.yaml.in
configs/vla/: take_wrong_item_right_arm.yaml.in
docs/: DATASET_AND_MAPPING.md  EVALUATION.md  PIPELINE.md  README.md  ROADMAP.md  TRAINING.md  VERIFICATION.md
docs/data/: DATASET_AND_MAPPING.md
docs/evaluation/: EVALUATION_AND_DEPLOYMENT.md
docs/reference/: VALIDATION_STATUS.md
docs/training/: FINETUNING.md
docs/workflow/: PIPELINE.md
scripts/: _common.sh  bootstrap_upstream.sh  check_environment.sh  compute_norm_stats.sh  download_dataset.sh  eval_open_loop.sh  export_code.sh  prepare_dataset.sh  render_configs.sh  smoke_full_sample.sh  smoke_loader.sh  train.sh  train_smoke.sh  validate_dataset.sh
src/lingbot_vla_finetune/: __init__.py  audit.py  contract.py  download.py  full_sample.py  norm_stats.py  preflight.py  prepare.py  render.py  smoke_loader.py
tests/: test_audit.py  test_contract.py  test_norm_stats.py  test_prepare.py  test_render.py
